# aries-acapy-plugins

./: .gitignore  aries-acapy-plugins.code-workspace
oid4vc/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
oid4vc/auth_server/admin/: deps.py  main.py  models.py
oid4vc/auth_server/admin/repositories/: client_repository.py  tenant_key_repository.py  tenant_repository.py
oid4vc/auth_server/admin/routers/: internal.py  migrations.py  tenants.py
oid4vc/auth_server/core/: models.py
oid4vc/auth_server/resources/: dev_seed.py
oid4vc/auth_server/tenant/: deps.py  main.py  models.py
oid4vc/demo/: .env.example  .gitignore  README.md  create-mdoc-offer.ts  docker-compose.yaml  docker-compose.yml  package.json  setup.sh
oid4vc/demo/frontend/: index.js
oid4vc/demo/playwright/: demo.spec.ts  package-lock.json  package.json  playwright.config.ts
oid4vc/docker/: Dockerfile  Dockerfile.base  dev-verifier.yml  dev.yml  isomdl_uniffi-0.1.0-py3-none-any.whl  pyproject.toml
oid4vc/docs/: admin-api-mso-mdoc.md  admin-api-oid4vci.md  admin-api-oid4vp.md  admin-api-reference.md  architecture.md  cookbook-issuance.md  cookbook-verification.md  credential-formats.md  getting-started.md  index.md  production.md  public-api-reference.md  troubleshooting.md
oid4vc/integration/: .gitignore  Dockerfile  Dockerfile.test.runner  README.md  acapy_controller.py  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.interop.yml  docker-compose.yml  generate_certs.py  pyproject.toml  run-conformance-tests.sh  run-tests.sh  run_acapy_credo_tests.sh  run_tests.py
oid4vc/integration/certs/: intermediate_ca.key  intermediate_ca.pem  leaf.key  leaf.pem  leaf.pem.orig  root_ca.key  root_ca.pem
oid4vc/integration/conformance/: nginx-tls.conf  run_conformance.py  setup_acapy.py
oid4vc/integration/credo/: Dockerfile  agent.ts  debug.ts  helpers.ts  index.ts  issuance.ts  package-lock.json  package.json  tsconfig.json  verification.ts
oid4vc/integration/credo_wrapper/: __init__.py
oid4vc/integration/isomdl_wrapper/: __init__.py
oid4vc/integration/oid4vci_client/: client.py  crypto.py
oid4vc/integration/playwright/: playwright.config.ts  run-playwright-tests.sh
oid4vc/integration/sphereon/: Dockerfile  index.ts  package-lock.json  package.json
oid4vc/integration/sphereon_wrapper/: __init__.py
oid4vc/integration/test-results/: junit-quick.xml
oid4vc/integration/tests/: base.py  conftest.py  test_acapy_credo_dcql_flow.py  test_acapy_credo_oid4vc_flow.py  test_acapy_oid4vc_simple.py  test_acapy_to_credo_issuance.py  test_acapy_to_credo_to_acapy_flow.py  test_compatibility_edge_cases.py  test_config.py  test_cred_offer_uri.py  test_credo_revocation.py  test_cross_wallet_compatibility.py  test_cross_wallet_credo_jwt.py  test_cross_wallet_mdoc.py  test_cross_wallet_multi_credential.py  test_cross_wallet_sphereon_jwt.py  test_dcql.py  test_docker_connectivity.py  test_dual_endpoints.py  test_mdoc_age_predicates.py  test_multi_credential_dcql.py  test_negative_errors.py  test_oid4vc_mdoc_compliance.py  test_oid4vci_10_compliance.py  test_oid4vci_revocation.py  test_pki.py  test_pre_auth_code_flow.py  test_revocation_e2e.py  test_sphereon.py  test_sphereon_negative.py  test_trust_anchor_validation.py  test_utils.py  test_validation.py
oid4vc/jwt_vc_json/: cred_processor.py  supported_credential.py
oid4vc/jwt_vc_json/tests/: conftest.py  test_cred_processor.py  test_init.py
oid4vc/mso_mdoc/: DEEP_REVIEW.md  README.md  __init__.py  cred_processor.py  key_generation.py  key_routes.py  payload.py  routes.py  signing_backend.py  signing_key.py  storage.py  trust_anchor_routes.py
oid4vc/mso_mdoc/mdoc/: __init__.py  cred_verifier.py  issuer.py  pres_verifier.py  trust_store.py  utils.py  verifier.py
oid4vc/mso_mdoc/mso/: issuer.py  verifier.py
oid4vc/mso_mdoc/storage/: README.md  __init__.py  base.py  certificates.py  config.py  keys.py  trust_anchors.py
oid4vc/mso_mdoc/tests/: conftest.py  test_actual_mdoc_integration.py  test_cert_chain_handling.py  test_cert_trust_registry.py  test_cred_processor.py  test_cred_processor_and_verifier_unit.py  test_cred_processor_unit.py  test_did_jwk_kid.py  test_empty_trust_anchors.py  test_expired_certificate.py  test_functional_cred_processor.py  test_mdoc_functionality.py  test_real_cred_processor.py  test_real_mdoc_functionality.py  test_real_storage_integration.py  test_review_issues.py  test_status_list_check.py  test_storage.py  test_storage_modules.py  test_trust_registry.py  test_validation.py  test_verifier.py  test_verifier_limitation.py  test_wallet_trust_store_per_request.py
oid4vc/mso_mdoc/uniffi_scratch/: isomdl_uniffi.py  libisomdl_uniffi.dylib
oid4vc/oid4vc/: __init__.py  app_resources.py  config.py  cred_processor.py  dcql.py  did_utils.py  jwk_resolver.py  jwt.py  migrate.py  oid4vci_server.py  pex.py  public_routes.py  routes.py  utils.py
oid4vc/oid4vc/models/: dcql_query.py  exchange.py  nonce.py  presentation.py  presentation_definition.py  request.py  supported_cred.py
oid4vc/oid4vc/public_routes/: __init__.py  constants.py  credential.py  did_configuration.py  metadata.py  nonce.py  notification.py  presentation.py  proof.py  registration.py  status.py  token.py  verification.py
oid4vc/oid4vc/routes/: __init__.py  constants.py  credential_offer.py  did_jwk.py  exchange.py  helpers.py  supported_credential.py  vp_dcql.py  vp_pres_def.py  vp_presentation.py  vp_request.py  x509.py
oid4vc/oid4vc/tests/: conftest.py  test_additional_coverage.py  test_app_resources.py  test_dcql.py  test_did_configuration.py  test_dpop.py  test_improvements.py  test_issue_cred_errors.py  test_metadata.py  test_migrate.py  test_pex.py  test_pex_conformance.py  test_pex_jwt_vp.py  test_proofs_array_truncation.py  test_routes.py  test_token.py  test_utils.py  test_vp_request.py
oid4vc/sd_jwt_vc/: __init__.py  cred_processor.py  routes.py  supported_credential.py
oid4vc/sd_jwt_vc/tests/: conftest.py  test_cred_processor.py  test_presentation.py  test_selective_disclosure.py
oid4vci/oid4vci/: routes.py
(+125 files in other folders)
