[project]
name = "oid4vc"
version = "0.1.0"
description = "OpenID for Verifiable Credentials plugin for acapy. (Supported acapy-agent version: 1.4.0)"
authors = [
    {name = "Adam Burdett", email = "burdettadam@gmail.com"},
    {name = "Char Howland", email = "char@indicio.tech"},
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
    {name = "Micah Peltier", email = "micah@indicio.tech"},
    {name = "Colton Wolkins", email = "colton@indicio.tech"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.9.5,<4.0.0",
    "aries-askar~=0.4.3",
    "aiohttp-cors>=0.7.0,<1.0.0",
    "marshmallow>=3.20.1,<4.0.0",
    "jsonschema>=4.23.0,<5.0.0",
    "jsonpath>=0.82.2,<1.0.0",
    "oscrypto @ git+https://github.com/wbond/oscrypto.git@1547f53",
    "acapy-agent~=1.4.0",
    "cryptography>=43.0.3",
    "cbor2>=5.4.3",
    # mso_mdoc dependencies
    "cwt>=2.0.0",
    "pycose>=1.0.0",
    "cbor-diag>=1.0.0",
    # sd_jwt dependencies  
    "jsonpointer>=3.0.0,<4.0.0",
    # isomdl-uniffi from GitHub (will be updated to releases once available)
    # Temporarily commented for Docker builds - installed via wheel file instead
    # "isomdl-uniffi @ git+https://github.com/Indicio-tech/isomdl-uniffi.git@feat/x509#subdirectory=python",
]

[project.optional-dependencies]
aca-py = ["acapy-agent~=1.4.0"]
sd_jwt = ["jsonpointer>=3.0.0,<4.0.0"]

[tool.uv.sources]
acapy-agent = { path = "../../acapy", editable = true }

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "C", "D"]
ignore = [
    # Google Python Doc Style
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D401",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D202", # Allow blank line after docstring
    "D104", # Don't require docstring in public package
    # Things that we should fix, but are too much work right now
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
"**/{demo}/*" = ["F841", "D", "E501"]

[tool.pytest.ini_options]
testpaths = "oid4vc"
addopts = """
    -p no:warnings
    --quiet --junitxml=./.test-reports/junit.xml
    --cov-config .coveragerc --cov=oid4vc --cov-report term --cov-report xml
"""
markers = []
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["*/tests/*", "docker/*", "integration/*", "*/definition.py"]
data_file = ".test-reports/.coverage"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@abstract"]
precision = 2
skip_covered = true
show_missing = true

[tool.coverage.xml]
output = ".test-reports/coverage.xml"

[tool.setuptools]
packages = ["oid4vc", "jwt_vc_json", "mso_mdoc", "sd_jwt_vc"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "qrcode[pil]>=8.2",
    "ruff>=0.11.4",
    "pytest-cov>=5.0.0",
    "pytest-ruff>=0.4.1",
    "aiohttp>=3.9.5",
    "requests>=2.31.0",
]

integration = [
    "aries-askar~=0.4.3",
    "indy-credx~=1.1.1",
    "indy-vdr~=0.4.1",
    "python3-indy>=1.11.1",
    "anoncreds>=0.2.0",
]

