[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oid4vc"
version = "0.1.0"
description = "OpenID for Verifiable Credentials plugin for acapy"
authors = [
    {name = "Adam Burdett", email = "burdettadam@gmail.com"},
    {name = "Char Howland", email = "char@indicio.tech"},
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
    {name = "Micah Peltier", email = "micah@indicio.tech"},
    {name = "Colton Wolkins", email = "colton@indicio.tech"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.9.5,<4.0.0",
    "aries-askar~=0.4.3",
    "aiohttp-cors>=0.7.0,<1.0.0",
    "marshmallow>=3.20.1,<4.0.0",
    "jsonschema>=4.23.0,<5.0.0",
    "jsonpath>=0.82.2,<1.0.0",
    "oscrypto @ git+https://github.com/wbond/oscrypto.git@1547f53",
    "acapy-agent~=1.3.0",
    "cryptography>=46.0.3",
    "cbor2>=5.4.3",
    # mso_mdoc dependencies
    "cwt>=1.6.0",
    "pycose>=1.0.0",
    # sd_jwt dependencies
    "jsonpointer>=3.0.0,<4.0.0",
    # isomdl-uniffi from GitHub (will be updated to releases once available)  
    "isomdl-uniffi @ git+https://github.com/Indicio-tech/isomdl-uniffi.git@feat/x509#subdirectory=python",
]

[project.optional-dependencies]
aca-py = ["acapy-agent~=1.3.0"]
sd_jwt = ["jsonpointer>=3.0.0,<4.0.0"]

[project.entry-points."acapy_agent.plugins"]
oid4vc = "oid4vc"

[tool.hatch.metadata]
allow-direct-references = true