[project]
name = "oid4vc-integration-tests"
version = "0.1.0"
description = "OID4VC Integration Tests"
authors = [
    {name = "Adam Burdett", email = "burdettadam@gmail.com"},
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
    "aiohttp>=3.9.5",
    "aries-askar>=0.4.3",
    "pydantic>=2.7.0",
    "cryptography>=46.0.3",
    "cbor2>=5.4.3",
    # mso_mdoc dependencies
    "cwt>=1.6.0",
    "pycose>=1.0.0",
    # sd_jwt dependencies  
    "jsonpointer>=3.0.0,<4.0.0",
    # isomdl-uniffi from GitHub (will be updated to releases once available)
    # Temporarily commented for Docker builds - not needed for integration tests
    # "isomdl-uniffi @ git+https://github.com/Indicio-tech/isomdl-uniffi.git@feat/x509#subdirectory=python",
]

[tool.hatch.build.targets.wheel]
packages = ["tests", "acapy_controller.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "acapy-controller>=0.3.0",
    "black>=24.4.2",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
markers = [
    "interop: interoperability testing",
    "sphereon: sphereon client tests", 
    "credo: credo client tests",
    "mdoc: mso_mdoc credential tests",
    "sdjwt: SD-JWT credential tests",
    "integration: integration testing",
    "keycloak: keycloak tests",
    "acapy: acapy tests",
]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

